V.1.1 All properties for players and clubs working

--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -3,8 +3,10 @@
   <h1><%= @club.name %></h1>
   <h3><%= @club.location %></h3>
   <h4><%= @club.date_of_establishment %></h4>
+
   <h1>Players</h1>
   <p>
+    <%= @club.id %>
 
 
 
