--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,12 +1,6 @@
 <h1>New Player</h1>
 
-
-
-<%= render 'form', player: @player %>
-
-<%= link_to 'Back', players_path %>
-
-<%= form_for :club, url: players_path do |f| %>
+<%= form_for :player, url: players_path do |f| %>
   <p>
     <%= f.label :First_Name %><br>
     <%= f.text_field :firstName %>
@@ -20,8 +14,20 @@
     <%= f.label :Age %><br>
     <%= f.text_field :age %>
   </p>
-
+  <p>
+    <%= f.label :Nationality %><br>
+    <%= f.text_field :nationality %>
+  </p>
+  <p>
+    <%= f.label :Position %><br>
+    <%= f.text_field :position %>
+  </p>
+  <p>
+    <%= f.label :Club %><br>
+    <%= f.text_field :club_id %>
+  </p>
   <p>
     <%= f.submit %>
   </p>
+  <%= link_to 'Back', players_path %>
 <% end %>
