--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -11,6 +11,33 @@
     </div>
   <% end %>
 
+    <p>
+      <%= form.label :First_Name %><br>
+      <%= form.text_field :firstName %>
+    </p>
+
+    <p>
+      <%= form.label :Last_Name %><br>
+      <%= form.text_field :lastName %>
+    </p>
+    <p>
+      <%= form.label :Club %><br>
+      <%= form.text_field :club_id %>
+    </p>
+
+    <p>
+      <%= form.label :Nationality %><br>
+      <%= form.text_field :nationality %>
+    </p>
+    <p>
+      <%= form.label :Position %><br>
+      <%= form.text_field :position %>
+    </p>
+    <p>
+      <%= form.label :Age %><br>
+      <%= form.text_field :age %>
+    </p>
+
   <div class="actions">
     <%= form.submit %>
   </div>
