--- a/app/views/clubs/edit.html.erb
+++ b/app/views/clubs/edit.html.erb
@@ -1,27 +1,6 @@
 <h1>Editing Club</h1>
 
-
-<%= form_for :club, url: clubs_path do |f| %>
-  <p>
-    <%= f.label :Name %><br>
-    <%= f.text_field :name %>
-  </p>
-
-  <p>
-    <%= f.label :Location %><br>
-    <%= f.text_field :location %>
-  </p>
-  <p>
-    <%= f.label :Founded %><br>
-    <%= f.text_field :date_of_establishment %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-
-  <%= link_to 'Back', clubs_path %>
-<% end %>
+<%= render 'form', club: @club %>
 
 <%= link_to 'Show', @club %> |
 <%= link_to 'Back', clubs_path %>
