--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -10,11 +10,18 @@
   </thead>
 
   <tbody>
+      <tr>
+        <td>Club Name</td>
+        <td>Location</td>
+        <td>Founded</td>
+        <td>Club ID</td>
+      </tr>
     <% @clubs.each do |club| %>
       <tr>
-        <td><%= club.name %></td>
+        <td><a href="/players.<%= club.id %>"><%= club.name %></a></td>
         <td><%= club.location %></td>
         <td><%= club.date_of_establishment %></td>
+          <td><%= club.id %></td>
         <td><%= link_to 'Show', club %></td>
         <td><%= link_to 'Edit', edit_club_path(club) %></td>
         <td><%= link_to 'Destroy', club, method: :delete, data: { confirm: 'Are you sure?' } %></td>
