--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -5,8 +5,18 @@
   <h4><%= @club.date_of_establishment %></h4>
 
   <h1>Players</h1>
-  <p>
-    <%= @club.id %>
+  <% @players.each do |player| %>
+    <tr>
+      <td><%= player.firstName %></td>
+      <td><%= player.lastName %></td>
+      <td><%= player.age %></td>
+      <td><%= player.nationality %></td>
+      <td><%= player.position %></td>
+      <td><%= link_to 'Show', player %></td>
+      <td><%= link_to 'Edit', edit_player_path(player) %></td>
+      <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+  <% end %>
 
 
 
