--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with(model: club, local: true) do |form| %>
-  <% if club.errors.any? %>
+<%= form_with(model: @club, local: true) do |form| %>
+  <% if @club.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(club.errors.count, "error") %> prohibited this club from being saved:</h2>
 
