--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,31 @@
     <title>RorProject10</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' %>
+    <%= stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <nav class="navbar navbar-default">
+  <!-- <div class="container">
+
+  </div> -->
+     <a class="navbar-brand" href="/">Home</a>
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+
+     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+       <ul class="navbar-nav ">
+         <%= link_to "Add Club", new_club_path %>
+       </ul>
+       <ul class="navbar-nav navbar-center">
+        <%= link_to "Add Player", new_player_path %>
+       </ul>
+     </div>
+   </nav>
+   <div class="container">
     <% if user_signed_in? %>
 Logged in as <strong><%= current_user.email %></strong>.
 <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
