--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -42,3 +42,13 @@
     <%= form.submit %>
   </div>
 <% end %>
+<div>
+<h3> Assigning Player's CLub</h3>
+<h4><strong> Use the Club ID to assign a player to a club<strong></h4>
+
+
+<% @clubs.each do |club| %>
+<p> Club Name: <%= club.name %></p>
+<p>Club ID: <%= club.id %></p>
+<% end %>
+<div>
