--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -27,4 +27,4 @@
 <%= link_to 'Back', players_path %>
 </strong>
 
-<img class="float" src="/football-player.png" alt="PLayer" height="300px" width="300px">
+<img class="float" src="/images/football-player.png" alt="PLayer" height="300px" width="300px">
