--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,4 +1,4 @@
 <h1>New Player</h1>
-
+<img class="floatleft" src="/images/newplayer.png" alt="New Player Icon">
   <%= render 'form', player: @player %>
   <%= link_to 'Back', players_path %>
