--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -1,10 +1,10 @@
   <p id="notice"><%= notice %></p>
-
+<div class= "centre">
   <h1><%= @club.name %></h1>
   <h3>Location: <%= @club.location %></h3>
   <h4>Founded: <%= @club.date_of_establishment %></h4>
   <h1>Players</h1>
-
+</div>
   <table class="table table-striped table-dark">
     <thead>
       <tr>
