--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -1,4 +1,4 @@
 <h1>Editing Player</h1>
-
+<img class="floatleft" src="/images/newplayer.png" alt="New Player Icon">
 <%= link_to 'Back', players_path %>
 <%= render 'form', player: @player %>
